--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   <tr>
     <th>Index</th>
     <th>Name</th>
-    <th>Log</th>
+    <th>Services</th>
     <th colspan="3"></th>
   </tr>
 
@@ -12,10 +12,13 @@
       <tr>
         <td><%= user.id %></td>
         <td><%= user.name %></td>
-        <td><%= user.log %></td>
+        <td><% user.services.each do |service| %>
+              <%= service.name =%>
+            <% end %>
+        </td>
         <td><%= link_to 'Show', user_path(user) %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%#= link_to 'Destroy', user_path(user),
+        <td><%= link_to 'Destroy', user_path(user),
                         method: :delete,
                 data: { confirm: 'Are you sure?' } %></td>
       </tr>
